--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -3,4 +3,6 @@ project (yuan-lang VERSION 1.0.0 DESCRIPTION "主项目" LANGUAGES CXX)
 
 add_subdirectory(test)
 
+include_directories(./include)
+
 add_executable(hello src/main.cpp)
