--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,8 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "fstream": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "unordered_map": "cpp"
     },
     "files.encoding": "utf8bom"
 }
