--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "xutility": "cpp",
         "fstream": "cpp",
         "unordered_set": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "list": "cpp"
     },
     "files.encoding": "utf8bom"
 }
