--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,13 +1,9 @@
 cmake_minimum_required (VERSION 3.12)
 project (yuan-lang VERSION 1.0.0 DESCRIPTION "主项目" LANGUAGES CXX)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
 
 add_subdirectory(test)
+add_subdirectory(src/compiler)
+add_subdirectory(src/vm)
 
-include_directories(${PROJECT_SOURCE_DIR}/include/)
-
-#查找当前目录下的所有源文件，并将名称保存到 DIR_SRCS 变量
-aux_source_directory(src DIR_SRCS)
-
-add_executable(hello ${DIR_SRCS})
