--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -4,4 +4,6 @@ project (yuan-lang VERSION 1.0.0 DESCRIPTION "主项目" LANGUAGES CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
 
 add_subdirectory(test)
+add_subdirectory(compiler)
+
 
